# resources/views/article/comment/commentsDisplay.blade.php
@@ -25,7 +25,7 @@
                             <input type="hidden" name="position_{{ $comment->position }}" value="{{ $comment->position }}" />
                             <div class="row" style="margin-top:5pt; margin-left:2pt; margin-right:2pt; float: right;">
                                 <div style="float: right; margin-right: 10px;">
-                                    <button class="btn btn-warning btn-block" type="submit" formmethod="post" style="float: right;" formaction="{{ route('articles.comments.store', ['article' => $article, 'comment' => $comment]) }}">Reply</button>
+                                    <button class="btn btn-warning btn-block" type="submit" formmethod="post" style="float: right;" formaction="{{ route('articles.comments.reply', ['article_id' => $article, 'comment' => $comment]) }}">Reply</button>
                                 </div>
                             </div>
                         </td>
@@ -57,16 +57,10 @@
         </div>
     </div>
     @endforeach
-
+    <hr />
     <div class="paginator">
         {!! $comments->appends(\Request::except('page'))->render() !!}
         <p>{{ __('Page') }} {{ $comments->currentPage() }} {{ __('of') }} {{ $comments->lastPage() }}</p>
         {{ $comments->links() }}
-    </div>
-
-    <hr />
-    <div class="row" style="margin-top:5pt; margin-left:2pt; margin-right:2pt;">
-        <span class="text-muted"><i>text <strong>reply</strong></i></span>
-        <textarea class="form-control" name="replyText" rows="2"></textarea>
     </div>
 </div>
